--- a/jQuery1.html
+++ b/jQuery1.html
@@ -6,7 +6,6 @@
 function getHeadline(){
   var headline =  $('h1').text();
   return headline;
-
 }
 function changeHeadlines(){
   var h1changed = $('h1').text('New Headline');
@@ -14,6 +13,19 @@ function changeHeadlines(){
   return h1changed;
   return h2changed;
 }
+function logHeadlines(){
+  var logh2 =  $('h2').text();
+  console.log(logh2);
+  var logh1 =  $('h1').text();
+  console.log(logh1);
+}
+function swapHeadlines(){
+ var swap1 = $('h1').text();
+ var swap2 = $('h2').text();
+ $('h1').text(swap2);
+ $('h2').text(swap1);
+}
+
 
 </script>
   <title>jQuery test page</title>
